[package]
name = "mysql-customs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
clap = { version = "3.1", features = ["env", "derive", "wrap_help"] }
color-eyre = "0.6"
csv = "1.1"
fake = "2.4"
flate2 = "1"
indexmap = { version = "1.8", features = ["serde"] }
itertools = "0.10"
indicatif = "0.16"
mysql = "22"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
